# extractors-uv

./: .gitignore  README.md  pyproject.toml
src/extractors/: __init__.py  markers.py  ppatterns.py  spacyhelpers.py  tokenizer.py  tokenizer_test.py  utils.py  utils_test.py  web.py  web_test.py  xpatterns.py
src/extractors/categories/: categorized.py  tag.py
src/extractors/contacts/: email.py  email_test.py  extractor_test.py  url.py  url_test.py
src/extractors/experience/: data.py  extractor.py
src/extractors/skills/: extractor.py  extractor_test.py  utils.py
src/extractors/skills/data/: adobe.py  all.py  amazon.py  certificates.py  cisco.py  google.py  languages.py  topics.py  yandex.py
src/extractors/title/: roletag.py
src/extractors_uv/: conftest.py  dpatterns.py  extractor.py  markers.py  markers_test.py  tokenizer_test.py  utils_test.py  web.py  web_test.py
src/extractors_uv/categories/: data.py  extractor.py  extractor_test.py
src/extractors_uv/contacts/: extractor.py  phone.py  phone_test.py
src/extractors_uv/experience/: experience.py  extractor_test.py  tag.py
src/extractors_uv/language/: detector.py  detector_test.py
src/extractors_uv/skills/: tag.py
src/extractors_uv/skills/data/: ai.py  all.py  amazon.py  apache.py  apple.py  companies.py  google.py  hashicorp.py  industries.py  meta.py  microsoft.py  topics.py
src/extractors_uv/title/: data.py  extractor.py  extractor_test.py
